structure roughly final

--- a/DoE-Aug2015/index.html
+++ b/DoE-Aug2015/index.html
@@ -19,7 +19,7 @@
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
-<style>.reveal section img { background: none; border: none; box-shadow: none;} div.slide-footer img {position: absolute; bottom: 0; left:20px; width: 40%;} .underline {text-decoration: underline;} .flt li { float:left; margin-left: 2em; font-size: 75%; }</style>
+<style>.reveal section img { background: none; border: none; box-shadow: none;} div.slide-footer img {position: absolute; bottom: 0; left:20px; width: 40%;} .underline {text-decoration: underline;} .flt li { float:left; margin-left: 2em; font-size: 75%; } </style>
 </head>
 <body>
 <div class="reveal">
@@ -37,6 +37,8 @@
 <li>established in 1996 to provide long-term management of Australia's Antarctic data</li>
 <li>Australia's National Antarctic Data Centre</li>
 <li>motivations: Treaty obligations and desire for good science</li>
+<li>national and international</li>
+<li>roles: compliance <i>and</i> participation in science</li>
 
 </ul>
 
@@ -45,25 +47,19 @@
 </section>
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-2">AADC role</h2>
-<ul>
-<li>compliance</li>
-<li>participation in science</li>
+<h2 id="sec-2">Project management</h2>
 
-</ul>
+<div class="figure">
+<p><img src="./projects_diagram.png" alt="projects_diagram.png" />
+</p>
+</div>
 
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
 </section>
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-3">Project management</h2>
-
-
-<div class="slide-footer"><img src="aad-logo.png" /></div>
-</section>
-<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h3 id="sec-3-1">Data policy</h3>
+<h2 id="sec-3">Data policy</h2>
 <p>
 <a href="http://data.aad.gov.au/aadc/about/data_policy.cfm">http://data.aad.gov.au/aadc/about/data_policy.cfm</a>
 </p>
@@ -79,8 +75,10 @@
 
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
+</section>
+<section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h3 id="sec-3-2">Data management plans</h3>
+<h2 id="sec-4">Data management plans</h2>
 <p>
 <a href="http://data.aad.gov.au/aadc/projects/">http://data.aad.gov.au/aadc/projects/</a>
 </p>
@@ -88,9 +86,6 @@
 <ul>
 <li><p>
 first project milestone
-</p></li>
-<li><p>
-details of data and data products
 </p></li>
 <li><p>
 flags for:
@@ -109,10 +104,389 @@ flags for:
 
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-4-1">Data management plans</h3>
+
+<div class="figure">
+<p><img src="./dmp1.png" alt="dmp1.png" />
+</p>
+</div>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-4-2">Data management plans</h3>
+
+<div class="figure">
+<p><img src="./dmp2.png" alt="dmp2.png" />
+</p>
+</div>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-4-3">Data management plans</h3>
+
+<div class="figure">
+<p><img src="./dmp3.png" alt="dmp3.png" />
+</p>
+</div>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-4-4">Data management plans</h3>
+
+<div class="figure">
+<p><img src="./dmp4.png" alt="dmp4.png" />
+</p>
+</div>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-4-5">Data management plans</h3>
+
+<div class="figure">
+<p><img src="./dmp5.png" alt="dmp5.png" />
+</p>
+</div>
+
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-5">MyScience</h2>
+<ul>
+<li>project liaison officer</li>
+<li>annotations</li>
+<li>publications</li>
+<li>reporting of outputs</li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-6">Data management</h2>
+<ul>
+<li><p>
+data are:
+</p>
+<ul>
+<li><i>discoverable</i> via metadata catalogue</li>
+<li><i>preserved</i></li>
+<li><i>published</i> to appropriate networks</li>
+<li><i>curated</i> and <i>value-added</i></li>
+
+</ul></li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-7">Data DOI</h2>
+<ul>
+<li>digital identifier on a dataset</li>
+<li>citations, tracking of re-use</li>
+<li>recognition of scientists work and of the value of the data</li>
+<li>e.g. <a href="http://dx.doi.org/10.4225/15/54891299C13D8">10.4225/15/54891299C13D8</a></li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-8">Data curation</h2>
+<ul>
+<li><p>
+predator diets <a href="http://data.aad.gov.au/aadc/trophic">http://data.aad.gov.au/aadc/trophic</a>
+</p>
+<ul>
+<li>28k records from 350 studies</li>
+<li>published as data paper: <a href="http://dx.doi.org/10.1890/i0012-9658-92-5-1188">10.1890/i0012-9658-92-5-1188</a></li>
+
+</ul></li>
+<li><p>
+animal tracking data from 1980's onwards
+</p>
+<ul>
+<li>published as research article <a href="http://dx.doi.org/10.1111/ecog.01021">10.1111/ecog.01021</a></li>
+<li>used in East Antarctic MPA proposal</li>
+
+</ul></li>
+<li><p>
+Australian and Japanese marine science datasets
+</p>
+<ul>
+<li>data paper in progress</li>
+
+</ul></li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-9">Data publishing</h2>
+<ul>
+<li><p>
+direct to web
+</p></li>
+<li><p>
+GBIF, OBIS via IPT
+</p>
+<ul>
+<li>marine and terrestrial</li>
+<li>Atlas of Living Australia is Aus GBIF and OBIS node</li>
+<li>Antarctic OBIS node is biodiversity.aq</li>
+
+</ul></li>
+<li><p>
+AODN/IMOS via geoserver (in progress)
+</p></li>
+<li><p>
+data.gov.au via CKAN
+</p></li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-10">Application development</h2>
+<ul class="flt">
+<li>aerial photography</li>
+<li>ARGOS tracking</li>
+<li>heritage register</li>
+<li>AWS and met data</li>
+<li>biodiversity</li>
+<li>contaminated sites</li>
+<li>conversion calculators</li>
+<li>CPR</li>
+<li>DOIs</li>
+<li>ecology metadata</li>
+<li>EDS</li>
+<li>environmental data</li>
+<li>feature type catalogue</li>
+<li>gazetteers</li>
+<li>geographic information</li>
+<li>data collection guidelines</li>
+<li>remediation</li>
+<li>imageAntarctica</li>
+<li>map catalogue</li>
+<li>marine science</li>
+<li>metadata authoring tool</li>
+<li>metadata catalogue</li>
+<li>myscience</li>
+<li>publications</li>
+<li>requests</li>
+<li>satellite imagery</li>
+<li>sea ice measurements</li>
+<li>study sites</li>
+<li>SOE</li>
+<li>sample tracking</li>
+<li>survey control database</li>
+<li>symbology</li>
+<li>seal tags</li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-10-1">Development</h3>
+<ul>
+<li>early development ahead of science/Antarctic community in general</li>
+<li>lack of existing tools</li>
+<li>developing standards</li>
+<li>bespoke applications</li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h3 id="sec-10-2">Approach</h3>
+<ul>
+<li>deprecation of custom tools, unnecessary functionality (e.g. animal tracking, some maps)</li>
+<li>adopt modern developments (DOI, CKAN, IPT, github)</li>
+<li>improve integration where appropriate (MyScience, DMPs, metadata authoring tool)</li>
+<li>standardisation: easier contribution to external data initiatives (e.g. data.gov.au, SOOS portal)</li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-11">Open-source guidelines</h2>
+<ul>
+<li>recognition of staff contributions</li>
+<li>guidelines on IP ownership</li>
+<li>recognition of security and privacy requirements</li>
+<li>c.f. open source software policy</li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-12">Data APIs</h2>
+<ul>
+<li><p>
+programmatic access to data
+</p></li>
+<li><p>
+roll-our-own now morphed to CKAN
+</p>
+<ul>
+<li>file contents: standardisation</li>
+<li>R package (other clients)</li>
+
+</ul></li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-13">Data library</h2>
+<ul>
+<li><p>
+satellite-derived and similar environmental data
+</p></li>
+<li><p>
+R packages
+</p>
+<ul>
+<li>maintain the library</li>
+<li>make use of the data</li>
+
+</ul></li>
+<li><p>
+used across multiple projects
+</p></li>
+<li><p>
+similarities to the "data cube"
+</p></li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-14">Compute resources</h2>
+<ul>
+<li><p>
+NecTAR/RDSI
+</p>
+<ul>
+<li>storage &#x2014; compute</li>
+<li>centralized tools and data libraries</li>
+<li>backup and security issues</li>
+
+</ul></li>
+<li><p>
+local VM
+</p></li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-15">Hack days</h2>
+<ul>
+<li>various objectives</li>
+<li>fun, intense</li>
+<li>team building</li>
+<li>learning</li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-16">GIS and spatial data</h2>
+<ul>
+<li>Australian Antarctic mapping agency</li>
+<li>maintain spatial data, names</li>
+<li>map publication</li>
+<li>hydrographic surveying (with GA, Navy)</li>
+
+</ul>
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-17">Quantitative research</h2>
+<ul>
+<li><p>
+integration, synthesis studies
+</p>
+<ul>
+<li>East Antarctic predator tracking, now RAATD</li>
+
+</ul></li>
+<li><p>
+lead and engage in science projects
+</p></li>
+<li><p>
+representation in policy fora
+</p></li>
+<li><p>
+quantitative help desk
+</p></li>
+<li><p>
+AAD-UTas QAS PhD program
+</p></li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
 </section>
 <section>
 <section id="slide-nil" data-background="./penguin-noloop.gif" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-4">Thanks</h2>
+<h2 id="sec-18">Thanks</h2>
 
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
