--- a/DoE-Aug2015/index.html
+++ b/DoE-Aug2015/index.html
@@ -85,7 +85,7 @@
 
 <ul>
 <li><p>
-first project milestone
+first milestone: what data, when?
 </p></li>
 <li><p>
 flags for:
@@ -95,7 +95,7 @@ flags for:
 <li>data management responsibilities</li>
 <li>data archiving and publishing</li>
 <li>DOIs</li>
-<li>GIS assistance</li>
+<li>AADC assistance</li>
 
 </ul></li>
 
@@ -163,6 +163,10 @@ flags for:
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
 <h2 id="sec-5">MyScience</h2>
+<p>
+<a href="http://data.aad.gov.au/aadc/projects/">http://data.aad.gov.au/aadc/projects/</a>
+</p>
+
 <ul>
 <li>project liaison officer</li>
 <li>annotations</li>
@@ -218,23 +222,14 @@ data are:
 predator diets <a href="http://data.aad.gov.au/aadc/trophic">http://data.aad.gov.au/aadc/trophic</a>
 </p>
 <ul>
-<li>28k records from 350 studies</li>
-<li>published as data paper: <a href="http://dx.doi.org/10.1890/i0012-9658-92-5-1188">10.1890/i0012-9658-92-5-1188</a></li>
+<li>28k records from 350 studies; published as data paper: <a href="http://dx.doi.org/10.1890/i0012-9658-92-5-1188">10.1890/i0012-9658-92-5-1188</a></li>
 
 </ul></li>
 <li><p>
 animal tracking data from 1980's onwards
 </p>
 <ul>
-<li>published as research article <a href="http://dx.doi.org/10.1111/ecog.01021">10.1111/ecog.01021</a></li>
-<li>used in East Antarctic MPA proposal</li>
-
-</ul></li>
-<li><p>
-Australian and Japanese marine science datasets
-</p>
-<ul>
-<li>data paper in progress</li>
+<li>published as research article <a href="http://dx.doi.org/10.1111/ecog.01021">10.1111/ecog.01021</a>; used in East Antarctic MPA proposal</li>
 
 </ul></li>
 
