--- a/DoE-Aug2015/index.html
+++ b/DoE-Aug2015/index.html
@@ -176,6 +176,12 @@ flags for:
 </ul>
 
 
+<div class="figure">
+<p><img src="./projects_diagram.png" alt="projects_diagram.png" width="25%" />
+</p>
+</div>
+
+
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
 </section>
@@ -196,51 +202,12 @@ data are:
 
 </ul>
 
-
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
 </section>
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-7">Data DOI</h2>
-<ul>
-<li>digital identifier on a dataset</li>
-<li>citations, tracking of re-use</li>
-<li>recognition of scientists work and of the value of the data</li>
-<li>e.g. <a href="http://dx.doi.org/10.4225/15/54891299C13D8">10.4225/15/54891299C13D8</a></li>
-
-</ul>
-
-<div class="slide-footer"><img src="aad-logo.png" /></div>
-</section>
-</section>
-<section>
-<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-8">Data curation</h2>
-<ul>
-<li><p>
-predator diets <a href="http://data.aad.gov.au/aadc/trophic">http://data.aad.gov.au/aadc/trophic</a>
-</p>
-<ul>
-<li>28k records from 350 studies; published as data paper: <a href="http://dx.doi.org/10.1890/i0012-9658-92-5-1188">10.1890/i0012-9658-92-5-1188</a></li>
-
-</ul></li>
-<li><p>
-animal tracking data from 1980's onwards
-</p>
-<ul>
-<li>published as research article <a href="http://dx.doi.org/10.1111/ecog.01021">10.1111/ecog.01021</a>; used in East Antarctic MPA proposal</li>
-
-</ul></li>
-
-</ul>
-
-<div class="slide-footer"><img src="aad-logo.png" /></div>
-</section>
-</section>
-<section>
-<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-9">Data publishing</h2>
+<h2 id="sec-7">Data publishing</h2>
 <ul>
 <li><p>
 direct to web
@@ -269,7 +236,7 @@ data.gov.au via CKAN
 </section>
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-10">Application development</h2>
+<h2 id="sec-8">Application development</h2>
 <ul class="flt">
 <li>aerial photography</li>
 <li>ARGOS tracking</li>
@@ -311,7 +278,7 @@ data.gov.au via CKAN
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h3 id="sec-10-1">Development</h3>
+<h3 id="sec-8-1">Development</h3>
 <ul>
 <li>early development ahead of science/Antarctic community in general</li>
 <li>lack of existing tools</li>
@@ -324,7 +291,7 @@ data.gov.au via CKAN
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h3 id="sec-10-2">Approach</h3>
+<h3 id="sec-8-2">Approach</h3>
 <ul>
 <li>deprecation of custom tools, unnecessary functionality (e.g. animal tracking, some maps)</li>
 <li>adopt modern developments (DOI, CKAN, IPT, github)</li>
@@ -338,7 +305,7 @@ data.gov.au via CKAN
 </section>
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-11">Open-source guidelines</h2>
+<h2 id="sec-9">Open-source guidelines</h2>
 <ul>
 <li>recognition of staff contributions</li>
 <li>guidelines on IP ownership</li>
@@ -352,7 +319,7 @@ data.gov.au via CKAN
 </section>
 <section>
 <section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
-<h2 id="sec-12">Data APIs</h2>
+<h2 id="sec-10">Data APIs</h2>
 <ul>
 <li><p>
 programmatic access to data
@@ -367,6 +334,47 @@ roll-our-own now morphed to CKAN
 </ul></li>
 
 </ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-11">Data DOI</h2>
+<ul>
+<li>digital identifier on a dataset</li>
+<li>citations, tracking of re-use</li>
+<li>recognition of scientists work and of the value of the data</li>
+<li>e.g. <a href="http://dx.doi.org/10.4225/15/54891299C13D8">10.4225/15/54891299C13D8</a></li>
+
+</ul>
+
+
+<div class="slide-footer"><img src="aad-logo.png" /></div>
+</section>
+</section>
+<section>
+<section id="slide-nil" data-background="./aurora.jpg" data-background-size="100%" data-background-repeat="none">
+<h2 id="sec-12">Data curation</h2>
+<ul>
+<li><p>
+predator diets <a href="http://data.aad.gov.au/aadc/trophic">http://data.aad.gov.au/aadc/trophic</a>
+</p>
+<ul>
+<li>28k records from 350 studies; published as data paper: <a href="http://dx.doi.org/10.1890/i0012-9658-92-5-1188">10.1890/i0012-9658-92-5-1188</a></li>
+
+</ul></li>
+<li><p>
+animal tracking data from 1980's onwards
+</p>
+<ul>
+<li>published as research article <a href="http://dx.doi.org/10.1111/ecog.01021">10.1111/ecog.01021</a>; used in East Antarctic MPA proposal</li>
+
+</ul></li>
+
+</ul>
+
 
 <div class="slide-footer"><img src="aad-logo.png" /></div>
 </section>
