--- a/polardataforum2/index.html
+++ b/polardataforum2/index.html
@@ -25,7 +25,7 @@
 <div class="reveal">
 <div class="slides">
 <section id="sec-title-slide" data-background="./iceland_light.gif" data-background-size="100%" data-background-repeat="none">
-<h1>The Australian Antarctic Data Centre</h1><h4><a href="mailto:ben.raymond@aad.gov.au">ben.raymond@aad.gov.au</a></h4><img src="./aad-logo.png" style="width:40%; float:left; clear:none;">
+<h1>The Australian Antarctic Data Centre</h1><h4><a href="mailto:aadcmanager@aad.gov.au">aadcmanager@aad.gov.au</a></h4><img src="./aad-logo.png" style="width:40%; float:left; clear:none;">
 </section>
 
 <section>
